--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -1,9 +1,10 @@
-name: Remote Git Pull on VPS
+name: Continous Deployment
 
 on:
-  push:
-    branches:
-      - main
+  workflow_run:
+    workflows: ["Continous Integration"]
+    types:
+      - completed
 
 jobs:
   deploy:
@@ -14,6 +15,7 @@ jobs:
       uses: actions/checkout@v2
 
     - name: Execute remote Git pull on VPS
+      if: ${{ github.event.workflow_run.conclusion == 'success' && github.event.workflow_run.head_branch == 'main' }}
       run: |
         echo "1/8: Setting up private key..."
         echo "${{ secrets.VPS_PRIVATE_KEY }}" > private_key
