--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -69,7 +69,7 @@ jobs:
 # Done: Get sha256sum of ~/cod2/library/iwds
 # Done: Compare with ~/cod2/library/iwds_sum
 # Done: If not the same - build ~/cod2/library/000empty.iwd
-# ./restart.sh - copy maps
-# ./restart.sh - copy iwds
-# ./restart.sh - copy 000empty.iwd
-# ./restart.sh - restart docker-compose
+# ./restart.sh - copy ~/cod2/library/scripts
+# ./restart.sh - copy ~/cod2/library/iwds
+# ./restart.sh - copy ~/cod2/library/000empty.iwd
+# Done: ./restart.sh - restart docker-compose
