--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -12,6 +12,7 @@ jobs:
     uses: nl-squad/nl-cod2-workflows/.github/workflows/deploy.yml@main
     with:
       profile: default
+      branch: main
     secrets: inherit
 
   build-000empty:
@@ -62,14 +63,3 @@ jobs:
         rm -f $connection_key_path
       env:
         PRIVATE_KEY: ${{ secrets.VPS_PRIVATE_KEY }}
-
-# Done: Support for iwds path nl-cli
-# Done: ./src/scripts -> ~/cod2/library/scripts
-# Done: ./src/iwds -> ~/cod2/library/iwds
-# Done: Get sha256sum of ~/cod2/library/iwds
-# Done: Compare with ~/cod2/library/iwds_sum
-# Done: If not the same - build ~/cod2/library/000empty.iwd
-# ./restart.sh - copy ~/cod2/library/scripts
-# ./restart.sh - copy ~/cod2/library/iwds
-# ./restart.sh - copy ~/cod2/library/000empty.iwd
-# Done: ./restart.sh - restart docker-compose
